--- a/helloservice/job/config.yaml
+++ b/helloservice/job/config.yaml
@@ -5,6 +5,8 @@ actions:
       - name: "sh.keptn.event.deployment.triggered"
     tasks:
       - name: "Run helm"
+        files:
+          - /charts
         image: "alpine/helm:3.7.2"
         serviceAccount: "jes-deploy-using-helm"
         cmd: ["helm"]
@@ -44,8 +46,8 @@ actions:
     tasks:
       - name: "Run locust"
         files:
-          - /locust/basic.py
-          - /locust/locust.conf
+          - locust/basic.py
+          - locust/locust.conf
 
         image: "locustio/locust:2.8.6"
         cmd: ["locust"]
